--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,36 @@
 
 .calculator{
- margin: 5% 40% 5% 40%;
+ margin: 0 auto;
+ margin-top: 5%;
+ text-align: center;
+ max-width: 300px;
+ font-family: 'Roboto Slab', serif;
+
  
 }
 button{
   background-color: rgb(172, 164, 164);
-  width: 60px;
-  height: 60px;
+  width: 25%;
+  height: 70px;
   color: black;
   border: solid 1px rgb(172, 164, 164);
-  font-size: 20px;
+  font-size: 25px;
   outline: 0;
-  
 }
+
+button:hover{
+  background-color: rgba(85, 85, 85, 0.699);  
+  color: #fff;
+}
+
 .big{
-  width: 120px;
+  width: 50%;
 }
 input{
-  width: 240px;
-  height: 80px;
+  width: 100%;
+  height: 90px;
   background-color: black;
   border: 0;
   color: #fff;
-  font-size: 20px;
+  font-size: 30px;
 }
